# stlext

./: .gitignore  CMakeLists.txt  README.md  benchmark.py  stlext.h  test.h  test_hash.cpp  test_loop.cpp  test_sort.cpp
.github/workflows/: checks.yml
